# Blockchain-Asset-Audit-Agent

./: .env.example  .gitignore  README-cn.md  README.md  pyproject.toml
app/: config.py  logging_config.py  main.py
app/agent/: orchestrator.py  run_context.py  skill_executor.py  tool_factory.py
app/api/: agent.py  audit.py  auth.py  health.py  runs.py  skills.py
app/kb/: __init__.py  loader.py  search.py
app/llm/: __init__.py  base.py  gemini_client.py  mock_client.py  prompts.py
app/schemas/: audit.py  common.py  runs.py  skills.py
app/skills/: loader.py  registry.py
app/storage/: db.py  run_repository.py  skill_repository.py
app/tools/: audit_tools.py  input_tools.py  kb_tools.py  report_tools.py
app/utils/: ids.py  json_utils.py  markdown.py  time_utils.py
data/: address_book.json
deploy/nginx/: blockchain-audit-agent-demo-5215.conf
examples/: audit_request.json  balances_example.json  expert_sop.txt  ledger_example.json  transactions_example.json
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  (+2 more)
knowledge/: treasury_sop.md
notebooks/: 01_use_case_feasibility.ipynb
scripts/: bootstrap.sh  deploy.sh  publish_frontend.sh
skills/: approval_risk_review.yaml  asset_audit_basic.yaml  counterparty_risk_review.yaml  ledger_reconciliation_review.yaml  skill_generator_basic.yaml  treasury_outflow_audit.yaml
tests/: conftest.py  test_health.py  test_mock_audit_flow.py  test_skill_generation.py  test_skill_registry.py  test_vertex_config.py
(+19 files in other folders)
